# simple-erp

./: .gitignore  BACKUP_SYSTEM_REDESIGN.md  DEBUGGING_STATUS.md  IMPLEMENTATION_SUMMARY.md  PAYMENT_IMPLEMENTATION_STATUS.md  README.md  fix-errors.sh  index.html  package-list.txt  package-lock.json  package.json  test-backup.html  tsconfig.json  vite.config.ts  미수금_자동증가_문제_컨텍스트.md
docs/: 미수금_디버깅.md  브랜딩_개선_완료.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_payment_fields.sql  003_add_current_balance.sql  004_add_payment_types.sql  005_add_inventory_tables.sql  006_add_missing_columns.sql
src-tauri/src/: database.rs  errors.rs  main.rs  models.rs
src-tauri/src/commands/: README.md  company.rs  customer.rs  product.rs  transaction.rs
src-tauri/src/services/: README.md  company.rs  customer.rs  mod.rs  product.rs  transaction.rs
src/components/: AuthWrapper.tsx  FilterBar.tsx  Layout.tsx  Pagination.tsx  README.md  SortDropdown.tsx
src/components/backup/: BackupActions.tsx  BackupFileList.tsx  BackupFolderSettings.tsx  BackupMessage.tsx  BackupSection.tsx  BackupStats.tsx  README.md
src/components/charts/: CategorySalesBarChart.tsx  CustomerSalesPieChart.tsx  MonthlySalesChart.tsx  README.md
src/components/company/: CompanyInfoSection.tsx  README.md
src/components/csv/: CustomerCSVManager.tsx  ProductCSVManager.tsx  README.md  TransactionCSVExporter.tsx
src/components/excel/: CustomerExcelExporter.tsx  ProductExcelExporter.tsx  README.md  TransactionExcelExporter.tsx
src/components/expandable/: CustomerExpandableRow.tsx  ExpandableRowCard.tsx  ProductExpandableRow.tsx  README.md  TransactionExpandableRow.tsx
src/components/inventory/: ExpiryAlertCard.tsx  InventoryOverview.tsx  InventoryTable.tsx  README.md  StockMovementModal.tsx
src/components/invoice/: InvoicePreviewModal.tsx  README.md
src/components/modals/: CustomerModal.tsx  CustomerSelectionPanel.tsx  ProductDropdown.tsx  ProductModal.tsx  README.md  TransactionBasicInfo.tsx  TransactionItemsList.tsx  TransactionModal.tsx  TransactionModal_backup.tsx  TransactionSummary.tsx
src/components/sidebar/: PageSidebar.tsx  README.md  (+1 more)
src/hooks/: README.md  useChartData.ts  useExpandableTable.ts  useFiltering.ts  useOptimization.ts  usePagination.ts  useSorting.ts  useTableData.ts
src/lib/: README.md  auth.ts  backup.ts  data-management.ts  generateTestData.ts  sanitize.ts  tauri.ts  testData.ts  utils.ts
src/pages/: Customers.tsx  Dashboard.tsx  Inventory.tsx  Products.tsx  README.md  Reports.tsx  Settings.tsx  TaxInvoices.tsx  Transactions.tsx
src/types/: README.md  index.ts
(+42 files in other folders)
