[package]
name = "simple-erp"
version = "0.1.0"
description = "중소기업용 무료 로컬 ERP 시스템"
authors = ["Simple ERP Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# 개발용 최적화 설정
[profile.dev]
opt-level = 1        # 약간의 최적화로 컴파일 속도 향상
debug = true         # 디버그 정보 유지
split-debuginfo = "unpacked"  # Windows에서 빠른 링킹

[profile.dev.build-override]
opt-level = 3        # 빌드 스크립트 최적화

# 의존성 컴파일 최적화
[profile.dev.package."*"]
opt-level = 2        # 의존성은 더 많이 최적화
debug = false        # 의존성 디버그 정보 제거
